correction contraste

--- a/src/Pages/Forum/Components/PostCard/PostCard.scss
+++ b/src/Pages/Forum/Components/PostCard/PostCard.scss
@@ -1,4 +1,4 @@
-$color-primary: #d15159;
+$color-primary: #dc2b37;
 $color-secondary: #ffe2d4;
 $color-background: #6f6f6f;
 
