--- a/src/Pages/Homepage/components/Signup/SignupModal.scss
+++ b/src/Pages/Homepage/components/Signup/SignupModal.scss
@@ -1,4 +1,4 @@
-$color-primary: #d15159;
+$color-primary: #dc2b37;
 
 .modal {
   visibility: hidden;
