--- a/src/components/BackgroundHome/BackgroundHome.scss
+++ b/src/components/BackgroundHome/BackgroundHome.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/wire-one");
-$color-primary: #d15159;
+$color-primary: #dc2b37;
 $color-secondary: #ffe2d4;
 $color-tertiary: #6f6f6f;
 
