--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,4 +1,4 @@
-$color-primary: #d15159;
+$color-primary: #dc2b37;
 
 .gpm-button {
   display: flex;
