--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-$color-primary: #d15159;
+$color-primary: #dc2b37;
 $color-background: #6f6f6f;
 
 .gpm-header {
